--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,9 @@ minima:
     github: nattdev
 
 defaults:
-  -
+ -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      permalink: ":title"
